<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/death_descr"
            android:padding="15dp"
            android:background="#ffffff"
            android:adjustViewBounds="true"
            android:src="@drawable/death" />

        <TextView
            android:id="@+id/deathText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:background="#ffffff"
            android:text="@string/death_text"
            android:textColor="@color/fontColorDeathText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/deathObjectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:background="#ffffff"
            android:text="@string/death_object_text"
            android:textColor="@color/fontColorDeathObjectText"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/death_obj_descr"
            android:padding="15dp"
            android:background="#ffffff"
            android:adjustViewBounds="true"
            android:src="@drawable/ankh" />

        <TextView
            android:id="@+id/death_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            android:textColor="@color/fontColorDeathObjectText"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>