<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/destiny_descr"
            android:padding="15dp"
            android:background="#ffffff"
            android:adjustViewBounds="true"
            android:src="@drawable/destiny" />
        <TextView
            android:id="@+id/destinyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:background="#ffffff"
            android:text="@string/destiny_text"
            android:textColor="@color/fontColorDestinyText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/destinyObjectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:background="#ffffff"
            android:text="@string/destiny_object_text"
            android:textColor="@color/fontColorDestinyObjectText"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/destiny_obj_descr"
            android:padding="15dp"
            android:background="#ffffff"
            android:adjustViewBounds="true"
            android:src="@drawable/book" />

        <TextView
            android:id="@+id/destiny_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            android:textColor="@color/fontColorDestinyObjectText"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>